FIX: Added flex-wrap to sitemap for responsive design.

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -187,6 +187,7 @@ footer {
 
 .sitemap {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .sitemap ul {
@@ -214,6 +215,7 @@ footer {
 
 .sitemap--nav__right {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .sitemap--nav--column {
